[tool.poetry]
name = "lvmapi"
version = "0.1.0a0"
description = "The brains of LVM observing"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/lvmapi"
repository = "https://github.com/sdss/lvmapi"
documentation = "https://lvmapi.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "lvmapi", from = "src" }
]
include = ["src/lvmapi/data/*"]

[tool.poetry.dependencies]
python = "^3.11,<4"
sdsstools = "^1.8.1"
fastapi = ">=0.100.0"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
sdss-clu = "^2.2.1"
influxdb-client = {extras = ["async"], version = "^1.38.0"}
slack-sdk = "^3.23.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
astropy = "^6.0.0"
astroplan = "^0.9.1"
polars = "^1.0.0"
redis = {version = "^5.0.3", extras = ["hiredis"]}
httpx = "^0"
aiocache = "^0"
lvmgort = "^1.0.0b1"
cachetools = "^5.4.0"
taskiq = {extras = ["reload"], version = "^0"}
taskiq-redis = "^1"
taskiq-aio-pika = "^0"
taskiq-fastapi = "^0"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.0.0"
doc8 = ">=0.8.0"
ipdb = ">=0.12.3"
ruff = ">=0.5.0"
poethepoet = ">=0.24.2"

[tool.poe.tasks.dev]
shell = "uvicorn --host 0.0.0.0 --port $port --reload lvmapi.app:app"
env.PASSWORD = "$2b$12$o.9xYgbQKS5uuph/qM/0ou6fAua1A0N.n4bce45A2rC90OtROutLy"
env.SECRET_KEY = "33744caf930b8c695ec39221dd158e9c5fda13d0d19d1417ec71cf189aad6508"
args = [
  { name = "port", default = "8888" }
]
deps = ['taskiq']

[tool.poe.tasks.taskiq]
shell = "taskiq worker -r lvmapi.app:broker lvmapi.tasks --log-level $log_level &"
args = [
    { name = "log-level", default = "ERROR" }
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["lvmapi"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
