[project]
name = "lvmapi"
version = "0.2.12"
description = "REST API for LVM operations"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.11,<4"

dependencies = [
    "sdsstools>=1.9.1",
    "fastapi[standard]>=0.112.0",
    "lvmgort>=1.3.0",
    "lvmopstools[influxdb,kubernetes,ephemeris,slack,netmiko]>=0.5.13",
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.24.0",
    "sdss-clu>=2.3.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "astropy>=6.0.0",
    "polars>=1.18.0",
    "redis[hiredis]>=5.0.3",
    "httpx>=0.27.2",
    "taskiq[reload]>=0.11.7; sys_platform!='darwin'",
    "taskiq>=0.11.7; sys_platform=='darwin'",
    "taskiq-redis>=1.0.0",
    "taskiq-aio-pika>=0.4.1",
    "taskiq-fastapi>=0.3.2",
    "python-multipart>=0.0.9",
    "adbc-driver-postgresql>=1.1.0",
    "pyarrow>=17.0.0",
    "psycopg[binary]>=3.2.2",
    "jinja2>=3.1.4",
    "fastapi-cache2>=0.2.2",
    "python3-nmap>=1.9.1",
    "typing-extensions>=4.12.2",
    "sentry-sdk[fastapi]>=2.19.2",
]

[project.urls]
Homepage = "https://github.com/sdss/lvmapi"
Repository = "https://github.com/sdss/lvmapi"
Documentation = "https://lvmapi.readthedocs.org"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "doc8>=0.8.0",
    "ipdb>=0.12.3",
    "ruff>=0.5.0",
    "poethepoet>=0.24.2",
    "pytest>=8.3.4",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.uv]
package = true
default-groups = ["dev"]

# [tool.uv.sources]
# lvmgort = { git = "https://github.com/sdss/lvmgort", branch = "overwatcher" }
# lvmopstools = { git = "https://github.com/sdss/lvmopstools", branch = "main" }

[tool.poe.tasks.dev]
shell = "fastapi dev --host 0.0.0.0 --port $port --reload src/lvmapi/app.py"
env.LVMAPI_PASSWORD = "$2b$12$doiNxsJiL/lGdBMu/zLv5em4GVsUVH7e.YK3EAqxu1NU8qzXxKrti"  # "12345"
env.SECRET_KEY = "33744caf930b8c695ec39221dd158e9c5fda13d0d19d1417ec71cf189aad6508"
env.LVMAPI_ENVIRONMENT = "development"
args = [
  { name = "port", default = "8888" }
]
deps = ['taskiq']

[tool.poe.tasks.taskiq]
shell = "taskiq worker -r lvmapi.app:broker lvmapi.tasks --log-level $log_level &"
env.TASKIQ_QUEUE_NAME = 'lvmapi-dev'
args = [
    { name = "log-level", default = "ERROR" }
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["lvmapi"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "drift", "lvmopstools"]

[tool.pytest.ini_options]
addopts = "--cov lvmapi --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
include = ["src/lvmapi/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/lvmapi"]

[tool.hatch.build.targets.wheel]
packages = ["src/lvmapi"]
